fix width certificates on mobile

--- a/certificates.css
+++ b/certificates.css
@@ -48,8 +48,8 @@
 
 @media only screen and (max-width: 900px) {
     .logo-slide img, .logo-slide-2 img {
-        height: 150px;
-        margin: 0 10px;
+        height: 200px;
+        margin: 0 20px;
     }
   
 
